[tool.poetry]
name = "hundred-x"
version = "0.1.10"
description = "# hundred_x"
authors = ["8baller <8ball030@gmail.com>"]
readme = "README.md"
packages = [{include = "hundred_x"}]

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"
requests = "^2.31.0"
eth-account = "<=0.11.0"
eip712-structs = "^1.1.0"
web3 = ">=5,<6"
websockets = ">=9"
safe-pysha3 = "^1.0.4"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pylint = "^3.1.0"
pytest = "^8.1.1"
black = "^24.3.0"
flake8 = "^7.0.0"
semver = "^3.0.2"
tbump = "^6.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
