[project]
name = "hundred-x"
version = "0.1.16"
authors = [
    { name = "8baller", email = "8ball030@gmail.com" },
    { name = "Mihai Cosma", email = "mcosma@gmail.com" }
]
requires-python = ">= 3.10"
description = "Python API for 100x"
readme = "README.md"
dependencies = [
  "eip712-structs@git+https://github.com/wakamex/py-eip712-structs.git",
  "web3",
  "safe-pysha3",
]

[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "poetry",
    "tox-gh-actions",
    "tox-poetry",
    "isort",
    "pylint",
    "pytest",
    "black",
    "flake8",
    "semver",
    "tbump",
]
all = [
    "hundred-x[test, dev]",
]


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
